--- a/frontend/src/pages/ProjectDashboard/ProjectDashboard.css
+++ b/frontend/src/pages/ProjectDashboard/ProjectDashboard.css
@@ -265,3 +265,10 @@
     width: calc(100% - 32px);
   }
 }
+
+.loading-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: calc(100vh - 70px);
+}
