--- a/frontend/src/pages/GithubDashboard/GitHubDashboard.css
+++ b/frontend/src/pages/GithubDashboard/GitHubDashboard.css
@@ -220,3 +220,29 @@
     margin-bottom: 8px;
   }
 }
+.github-repo-info{
+  display: flex;
+  margin: 10px;
+  justify-content: center;
+  gap: 10px;
+}
+.github-edit-button{
+  background-color: #f6f8fa;
+  height: 30px;
+  color: #24292f;
+  border: 1px solid rgba(27, 31, 35, 0.15);
+  border-radius: 6px;
+  padding: 8px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+  cursor: pointer;
+  transition: background-color 0.2s cubic-bezier(0.3, 0, 0.5, 1);
+}
+.github-edit-button:hover {
+  background-color: #f3f4f6;
+}
+
+.github-edit-button:focus {
+  box-shadow: 0 0 0 3px rgba(9, 105, 218, 0.3);
+}
